RESOLVED FIXED172600
Fix memory leaks in MediaSampleAVFObjC::create
https://bugs.webkit.org/show_bug.cgi?id=172600
Summary Fix memory leaks in MediaSampleAVFObjC::create
youenn fablet
Reported 2017-05-25 11:15:20 PDT
MediaSampleAVFObjC::create has several memory leaks when passed a vector.
Attachments
Patch (3.45 KB, patch)
2017-05-25 11:16 PDT, youenn fablet
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (11.39 MB, application/zip)
2017-05-25 12:41 PDT, Build Bot
no flags
youenn fablet
Comment 1 2017-05-25 11:16:58 PDT
Build Bot
Comment 2 2017-05-25 12:41:41 PDT
Comment on attachment 311251 [details] Patch Attachment 311251 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/3815644 New failing tests: fetch/closing-while-fetching-blob.html
Build Bot
Comment 3 2017-05-25 12:41:43 PDT
Created attachment 311265 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
youenn fablet
Comment 4 2017-05-25 20:14:34 PDT
Comment on attachment 311251 [details] Patch Unrelated errors for iOS bot
Radar WebKit Bug Importer
Comment 5 2017-05-26 07:11:06 PDT
WebKit Commit Bot
Comment 6 2017-05-26 07:36:44 PDT
Comment on attachment 311251 [details] Patch Clearing flags on attachment: 311251 Committed r217489: <http://trac.webkit.org/changeset/217489>
WebKit Commit Bot
Comment 7 2017-05-26 07:36:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.