Fix memory leaks in MediaSampleAVFObjC::create https://bugs.webkit.org/show_bug.cgi?id=172600

Patch by Youenn Fablet <youenn@apple.com> on 2017-05-26
Reviewed by Eric Carlson.

No change of behavior.

* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::createImageSample):

Canonical link: https://commits.webkit.org/189546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217489 268f45cc-cd09-0410-ab3c-d52691b4dbfc